--- a/static/client/index.html
+++ b/static/client/index.html
@@ -23,16 +23,11 @@
 
     <div class="slide-container">
       <div class="slide-title-container" id="slide-title-container">
-        <span class="slide-title" id="slide-title">123</span>
+        <span class="slide-title" id="slide-title">Waiting for Admin...</span>
       </div>
 
       <div class="slide-body-container">
         <ul id="slide-list">
-          <li class="slide-list-item">123</li>
-          <li class="slide-list-item">123</li>
-          <li class="slide-list-item">123</li>
-          <li class="slide-list-item">123</li>
-          <li class="slide-list-item">123</li>
         </ul>
       </div>
     </div>
@@ -41,7 +36,7 @@
     <script src="/p5.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
-    <script src="/script.js"></script>
+    <script src="/client_script.js"></script>
     <script src="/canvas.js"></script>
 
   </body>
