--- a/static/home/index.html
+++ b/static/home/index.html
@@ -20,13 +20,13 @@
       <a>Enter the details, and hit ready when you are done!</a>
     </div>
 
-    <form action="/client">
+    <!-- <form action="/client"> -->
 
-      <label for="lname">Name</label>
+      <label>Name</label>
 
-      <input type="text" id="lname" name="lname">
+      <input type="text" id="name" >
 
-      <label for="lname">Pick A Colour</label>
+      <label>Pick A Colour</label>
 
       <div class="colour-selction">
         <div class="colour-options red" id="red">red</div>
@@ -35,9 +35,9 @@
         <div class="colour-options yellow" id="yellow">yellow</div>
       </div>
 
-      <div class="ready" id="ready" type="submit" value="Submit">Ready!</div>
+      <div class="ready" id="ready">Ready!</div>
 
-    </form>
+    <!-- </form> -->
 
     <script src="/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
