--- a/static/home/index.html
+++ b/static/home/index.html
@@ -16,7 +16,7 @@
   <body noscroll="true" >
 
     <div class="title">
-      <h1>Welcome!</h1>
+      <h1>Welcome ASOS Person!</h1>
       <a>Enter the details, and hit ready when you are done!</a>
     </div>
 
