--- a/static/home/index.html
+++ b/static/home/index.html
@@ -29,10 +29,12 @@
       <label>Pick A Colour</label>
 
       <div class="colour-selction">
+        <div class="colour-options yellow" id="yellow">yellow</div>
+        <div class="colour-options orange" id="orange">orange</div>
         <div class="colour-options red" id="red">red</div>
+        <div class="colour-options pink" id="pink">pink</div>
         <div class="colour-options blue" id="blue">blue</div>
         <div class="colour-options green" id="green">green</div>
-        <div class="colour-options yellow" id="yellow">yellow</div>
       </div>
 
       <div class="ready" id="ready">Ready!</div>
