--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -39,6 +39,9 @@
     <div class="admin-details">
     </div>
 
+    <div class="server-restart">
+    </div>
+
     <script src="/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
@@ -94,6 +97,12 @@
         }
 
       });
+
+      $('.server-restart').on('click',()=>{
+        $.get("/restart-server", function(data, status){
+              alert("Server Restarted Successfuly");
+        });
+      })
 
     </script>
 
